fixed jumbotron small size  margin

--- a/css/style.css
+++ b/css/style.css
@@ -207,5 +207,12 @@ line-height: .75;
      text-transform: uppercase;
    }
 
+   .container .jumbotron{
+     margin-top: 30px;
+     padding: 0;
+     box-shadow: 0 0 50px #3f0c1f;
+     border: 2px solid #3f0c1f
+   }
+
 
 }
